Dark mode -- Correct save green color

--- a/resources/css/components/notifications.css
+++ b/resources/css/components/notifications.css
@@ -21,7 +21,7 @@
     }
 
     &.success i {
-        @apply bg-green-400 text-green-900 dark:bg-green-500 dark:text-green-950;
+        @apply bg-green-400 text-green-900 dark:bg-green-400 dark:text-green-950;
     }
 
     &.error i {
